--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -3,32 +3,24 @@ on: push
 jobs: 
   build:
     runs-on: ubuntu-latest
-    
-    steps: 
-      - name: Check out repository code
-        uses: actions/checkout@v3
-
-      - name: Use node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18.x'
-          
-      - run: npm install
-      - run: npm run build 
-      
-  test: 
-    needs: build
-    runs-on: ubuntu-latest
-    
     steps: 
       - name: checkout repo
         uses: actions/checkout@v3
-        
       - name: use node.js
         uses: actions/setup-node@v3
-        
         with:
           node-version: '18.x'
-          
+      - run: npm install
+      - run: npm run build 
+  test: 
+    needs: build
+    runs-on: ubuntu-latest
+    steps: 
+      - name: checkout repo
+        uses: actions/checkout@v3
+      - name: use node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
       - run: npm install
       - run: npm test
