--- a/demo-files/secrets-demo.yml
+++ b/demo-files/secrets-demo.yml
@@ -1,8 +1,5 @@
 name: Echo Secrets and Variables
-on:
-  push:
-    branches:
-      - main  # Trigger this action when changes are pushed to the main branch
+on: push
 
 jobs:
   build:
