Made secrets reusable and in trigger workflow

--- a/demo-files/secrets-demo.yml
+++ b/demo-files/secrets-demo.yml
@@ -1,19 +1,29 @@
+# .github/workflows/echo-secrets-variables.yml
 name: Echo Secrets and Variables
-on: push
+
+on:
+  workflow_call:
+    inputs:
+      my-variable:
+        required: true
+        type: string
+      my-github-secret:
+        required: true
+        type: string
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     env:
-      MY_VARIABLE: "This is not a secret"  # This is a public environment variable
+      MY_VARIABLE: ${{ inputs.my-variable }}  # Use input variable instead of hardcoded value
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Echo environment variable
-      run: echo "My environment variable is $MY_VARIABLE"  # This is your variable that will not be masked
+      - name: Echo environment variable
+        run: echo "My environment variable is $MY_VARIABLE"  # This is your variable that will not be masked
 
-    - name: Echo GitHub secret
-      run: echo "My GitHub secret is ${{ secrets.MY_GITHUB_SECRET }}"  # This is the secret you added in a previous step
+      - name: Echo GitHub secret
+        run: echo "My GitHub secret is ${{ inputs.my-github-secret }}"  # Use input variable for the secret
