--- a/demo-files/hello-world.yml
+++ b/demo-files/hello-world.yml
@@ -1,13 +1,13 @@
-# name: hello-world
+name: hello-world
 
-# # on: push
+on: push
 
-# jobs: 
-#   hello-world-job:
+jobs: 
+  hello-world-job:
 
-#     runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
 
-#     steps: 
-#       - name: Check out repository code
-#         uses: actions/checkout@v3
-#       - run: echo "$(cat hello_world.txt)"
+    steps: 
+      - name: Check out repository code
+        uses: actions/checkout@v3
+      - run: echo "$(cat hello_world.txt)"
