--- a/.github/workflows/secrets-demo.yml
+++ b/.github/workflows/secrets-demo.yml
@@ -2,14 +2,9 @@
 name: Echo Secrets and Variables
 
 on:
-  workflow_call:
-    inputs:
-      my-variable:
-        required: true
-        type: string
-      my-github-secret:
-        required: true
-        type: string
+  push:
+    branches:
+      - main  # Trigger this action when changes are pushed to the main branch
 
 jobs:
   build:
