--- a/.github/workflows/secrets-demo.yml
+++ b/.github/workflows/secrets-demo.yml
@@ -11,14 +11,14 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      MY_VARIABLE: ${{ inputs.my-variable }}  # Use input variable instead of hardcoded value
+      MY_VARIABLE: "This is not a secret"  # This is a public environment variable
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
       - name: Echo environment variable
-        run: echo "My environment variable is $MY_VARIABLE"  # This is your variable that will not be masked
-
+        run: echo "My environment variable is $MY_VARIABLE" # This is your variable that will not be masked
+        
       - name: Echo GitHub secret
-        run: echo "My GitHub secret is ${{ inputs.my-github-secret }}"  # Use input variable for the secret
+        run: echo "My GitHub secret is ${{ secrets.MY_GITHUB_SECRET }}" # This is the secret you added in a previous step
